unpackaged/main/default/objects/CreditNote__c/CreditNote__c.object-meta.xml
<CustomObject>
    <label>Credit Note</label>
    <nameField>
        <displayFormat>CR{0000}</displayFormat>
        <label>Credit Note Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>