unpackaged/main/default/objects/CreditNote__c/fields/BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>BillingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Notes (Billing)</relationshipLabel>
    <relationshipName>AccountBillingCreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>