unpackaged/main/default/objects/CreditNote__c/fields/BillingAddress__c.field-meta.xml
<CustomField>
    <fullName>BillingAddress__c</fullName>
    <formula>Opportunity__r.Account.BillingStreet+BR()+
Opportunity__r.Account.BillingCity+BR()+
Opportunity__r.Account.BillingState+BR()+
Opportunity__r.Account.BillingPostalCode+BR()+
Opportunity__r.Account.BillingCountry+BR()</formula>
    <label>Billing Address</label>
    <type>Text</type>
</CustomField>