unpackaged/main/default/objects/CreditNote__c/fields/CalculatedMargin__c.field-meta.xml
<CustomField>
    <fullName>CalculatedMargin__c</fullName>
    <formula>Opportunity__r.Margin_Calc__c * RevenuePercentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>