unpackaged/main/default/objects/CreditNote__c/fields/CompanyAbbr__c.field-meta.xml
<CustomField>
    <fullName>CompanyAbbr__c</fullName>
    <formula>LEFT(TEXT(Company__c),3)</formula>
    <label>Company Stub</label>
    <type>Text</type>
</CustomField>