unpackaged/main/default/objects/CreditNote__c/fields/CreditNoteLink__c.field-meta.xml
<CustomField>
    <fullName>CreditNoteLink__c</fullName>
    <formula>HYPERLINK("/"+Id,CreditNumber__c,"_top")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Note</label>
    <type>Text</type>
</CustomField>