unpackaged/main/default/objects/CreditNote__c/fields/CreditNumber__c.field-meta.xml
<CustomField>
    <fullName>CreditNumber__c</fullName>
    <formula>Opportunity__r.Quote_Number_Revised__c+"-"+CompanyAbbr__c+"-"+Name</formula>
    <label>Credit Number</label>
    <type>Text</type>
</CustomField>