unpackaged/main/default/objects/CreditNote__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Credit Date</label>
    <type>Date</type>
</CustomField>