unpackaged/main/default/objects/CreditNote__c/fields/HardwareMargin__c.field-meta.xml
<CustomField>
    <fullName>HardwareMargin__c</fullName>
    <formula>Opportunity__r.HardwareMargin__c * HardwareRevenuePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hardware Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>