unpackaged/main/default/objects/CreditNote__c/fields/HideDetails__c.field-meta.xml
<CustomField>
    <fullName>HideDetails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide Details</label>
    <type>Checkbox</type>
</CustomField>