unpackaged/main/default/objects/CreditNote__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>CreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>