unpackaged/main/default/objects/CreditNote__c/fields/IsCredited__c.field-meta.xml
<CustomField>
    <fullName>IsCredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credited</label>
    <type>Checkbox</type>
</CustomField>