unpackaged/main/default/objects/CreditNote__c/fields/IsFactored_c__c.field-meta.xml
<CustomField>
    <fullName>IsFactored_c__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Factored</label>
    <type>Checkbox</type>
</CustomField>