unpackaged/main/default/objects/CreditNote__c/fields/IsHeaded__c.field-meta.xml
<CustomField>
    <fullName>IsHeaded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Headed</label>
    <type>Checkbox</type>
</CustomField>