unpackaged/main/default/objects/CreditNote__c/fields/IsPostedToSage2__c.field-meta.xml
<CustomField>
    <fullName>IsPostedToSage2__c</fullName>
    <label>Posted to Sage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>