unpackaged/main/default/objects/CreditNote__c/fields/IsPostedtoSage__c.field-meta.xml
<CustomField>
    <fullName>IsPostedtoSage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Posted to Sage (Legacy)</label>
    <type>Checkbox</type>
</CustomField>