unpackaged/main/default/objects/CreditNote__c/fields/MaintenanceRevenuePerc__c.field-meta.xml
<CustomField>
    <fullName>MaintenanceRevenuePerc__c</fullName>
    <formula>IF(MaintenanceRevenue__c = 0,
	0,
	IF(Opportunity__r.MaintenanceRevenue__c = 0,
		1,
		MaintenanceRevenue__c / Opportunity__r.MaintenanceRevenue__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Maintenance Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>