unpackaged/main/default/objects/CreditNote__c/fields/NetAmount__c.field-meta.xml
<CustomField>
    <fullName>NetAmount__c</fullName>
    <label>Total Net Amount</label>
    <summarizedField>CreditNoteLineItem__c.NetAmount__c</summarizedField>
    <summaryForeignKey>CreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>