unpackaged/main/default/objects/CreditNote__c/fields/NoLineItemsNoBusinessType__c.field-meta.xml
<CustomField>
    <fullName>NoLineItemsNoBusinessType__c</fullName>
    <label>Line Items w/o Business Type</label>
    <summaryFilterItems>
        <field>CreditNoteLineItem__c.BusinessType2__c</field>
        <operation>equals</operation>
        <value></value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>