unpackaged/main/default/objects/CreditNote__c/fields/OtherRevenue__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenue__c</fullName>
    <label>Other Revenue</label>
    <summarizedField>CreditNoteLineItem__c.NetAmount__c</summarizedField>
    <summaryFilterItems>
        <field>CreditNoteLineItem__c.ProductType_ro__c</field>
        <operation>notEqual</operation>
        <value>Software,Hardware,Services,Maintenance</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>