unpackaged/main/default/objects/CreditNote__c/fields/OtherRevenuePerc__c.field-meta.xml
<CustomField>
    <fullName>OtherRevenuePerc__c</fullName>
    <formula>IF(OtherRevenue__c = 0,
	0,
	IF(Opportunity__r.OtherRevenue__c = 0,
		1,
		OtherRevenue__c / Opportunity__r.OtherRevenue__c
	)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Other Revenue Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>