unpackaged/main/default/objects/CreditNote__c/fields/ServicesMargin__c.field-meta.xml
<CustomField>
    <fullName>ServicesMargin__c</fullName>
    <formula>Opportunity__r.ServicesMargin__c * ServicesRevenuePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Services Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>