unpackaged/main/default/objects/CreditNote__c/fields/ShippingAccount__c.field-meta.xml
<CustomField>
    <fullName>ShippingAccount__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Ship To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Credit Notes (Shipping)</relationshipLabel>
    <relationshipName>AccountShippingCreditNotes</relationshipName>
    <type>Lookup</type>
</CustomField>