unpackaged/main/default/objects/CreditNote__c/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <formula>Opportunity__r.Account.ShippingStreet+BR()+
Opportunity__r.Account.ShippingCity+BR()+
Opportunity__r.Account.ShippingState+BR()+
Opportunity__r.Account.ShippingPostalCode+BR()+
Opportunity__r.Account.ShippingCountry+BR()</formula>
    <label>Shipping Address</label>
    <type>Text</type>
</CustomField>