unpackaged/main/default/objects/CreditNote__c/fields/SoftwareMargin__c.field-meta.xml
<CustomField>
    <fullName>SoftwareMargin__c</fullName>
    <formula>Opportunity__r.SoftwareMargin__c * SoftwareRevenuePerc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Software Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>