unpackaged/main/default/objects/CreditNote__c/fields/SoftwareRevenue__c.field-meta.xml
<CustomField>
    <fullName>SoftwareRevenue__c</fullName>
    <label>Software Revenue</label>
    <summarizedField>CreditNoteLineItem__c.NetAmount__c</summarizedField>
    <summaryFilterItems>
        <field>CreditNoteLineItem__c.ProductType_ro__c</field>
        <operation>equals</operation>
        <value>Software</value>
    </summaryFilterItems>
    <summaryForeignKey>CreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>