unpackaged/main/default/objects/CreditNote__c/fields/TaxAmount__c.field-meta.xml
<CustomField>
    <fullName>TaxAmount__c</fullName>
    <label>VAT Amount</label>
    <summarizedField>CreditNoteLineItem__c.TaxAmount__c</summarizedField>
    <summaryForeignKey>CreditNoteLineItem__c.CreditNote__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>