unpackaged/main/default/objects/CreditNote__c/fields/TaxCode__c.field-meta.xml
<CustomField>
    <fullName>TaxCode__c</fullName>
    <formula>IF(AND(TaxAmount__c&gt;0,TEXT(CurrencyIsoCode)="GBP"),
"T1",
CASE(CurrencyIsoCode,
"EUR", "T0",
"T0")
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tax Code</label>
    <type>Text</type>
</CustomField>