unpackaged/main/default/objects/CreditNote__c/fields/UploadedToHitachi__c.field-meta.xml
<CustomField>
    <fullName>UploadedToHitachi__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Uploaded To Hitachi</label>
    <type>Checkbox</type>
</CustomField>