unpackaged/main/default/objects/CreditNote__c/validationRules/Credit_Date_must_be_in_Current_Month.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Date_must_be_in_Current_Month</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
  NOT(IsApexContext__c),
  NOT($User.InvoiceAdministrator__c),
  Date__c &lt; TODAY(),
  MONTH(Date__c)  != MONTH(TODAY()),
  NOT(ISCHANGED(IsPostedToSage2__c)),
  NOT(ISCHANGED(UploadedToHitachi__c))
)</errorConditionFormula>
    <errorDisplayField>Date__c</errorDisplayField>
    <errorMessage>Credit Note Date must be within the current month.</errorMessage>
</ValidationRule>