unpackaged/main/default/objects/CreditNote__c/validationRules/Credit_Note_cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>Credit_Note_cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
    AND(
      IsCredited__c,
      NOT(ISCHANGED(IsCredited__c)),
      NOT(ISCHANGED(IsPostedToSage2__c)),
      NOT(ISCHANGED(UploadedToHitachi__c))
    ),
    AND(
      NOT(IsCredited__c),
      ISCHANGED(IsCredited__c),
      NOT($User.InvoiceAdministrator__c)
    )
  )
 &amp;&amp; $Profile.Name != 'System Administrator'</errorConditionFormula>
    <errorMessage>This credit note can no longer be modified, as it has already been issued.</errorMessage>
</ValidationRule>