unpackaged/main/default/objects/CreditNote__c/listViews/AllCreditNotes.listView-meta.xml
<ListView>
    <fullName>AllCreditNotes</fullName>
    <columns>CreditNoteLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Division__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsCredited__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Credit Notes</label>
</ListView>