unpackaged/main/default/objects/CreditNote__c/listViews/AllCreditNotesUnticked.listView-meta.xml
<ListView>
    <fullName>AllCreditNotesUnticked</fullName>
    <columns>CreditNoteLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Division__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsCredited__c</columns>
    <columns>IsPostedtoSage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>IsCredited__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Credit Notes Unticked</label>
</ListView>