unpackaged/main/default/objects/CreditNote__c/listViews/PLMCreditNotesImport.listView-meta.xml
<ListView>
    <fullName>PLMCreditNotesImport</fullName>
    <columns>CreditNoteLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsCredited__c</columns>
    <columns>IsPostedToSage2__c</columns>
    <columns>IsFactored_c__c</columns>
    <columns>UploadedToHitachi__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Company__c</field>
        <operation>equals</operation>
        <value>PLM</value>
    </filters>
    <filters>
        <field>IsCredited__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>IsPostedToSage2__c</field>
        <operation>equals</operation>
    </filters>
    <label>PLM Credit Notes - To Import</label>
</ListView>