unpackaged/main/default/objects/CreditNote__c/listViews/Solid_Edge_Credit_Notes_Today.listView-meta.xml
<ListView>
    <fullName>Solid_Edge_Credit_Notes_Today</fullName>
    <columns>CreditNoteLink__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Date__c</columns>
    <columns>NetAmount__c</columns>
    <columns>TaxAmount__c</columns>
    <columns>TotalAmount__c</columns>
    <columns>IsCredited__c</columns>
    <columns>IsPostedToSage2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Solid Edge</value>
    </filters>
    <filters>
        <field>IsCredited__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Solid Edge Credit Notes - Today</label>
</ListView>